--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
-baseurl = "/"
+baseurl = "https://nipbusters.github.io"
 title = "Nipbusters"
 languageCode = "en-us"
 paginate = "10" # Number of posts per page
 theme = "Mainroad"
 disqusShortname = "" # Enable comments by entering your Disqus shortname
 googleAnalytics = "" # Enable Google Analytics by entering your tracking id
-
+publishDir = "nipbusters.github.io"
 [Author]
   name = "John Doe"
   bio = "John Doe's true identity is unknown. Maybe he is a successful blogger or writer. Nobody knows it."
